<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/bookmark"
        android:icon="@drawable/icon_bookmark"
        android:title="@string/menu_bookmark">
    </item>
    
    <item
        android:id="@+id/save"
        android:icon="@drawable/icon_save"
        android:title="@string/menu_save">
    </item>
    
    <item
        android:id="@+id/search"
        android:icon="@drawable/icon_search"
        android:title="@string/menu_search">
    </item>
    
    <item
        android:id="@+id/share"
        android:icon="@drawable/icon_share"
        android:title="@string/menu_share">
    </item>
    
    <item
        android:id="@+id/delete"
        android:icon="@drawable/icon_delete"
        android:title="@string/menu_delete">
    </item>
    
    <item
        android:id="@+id/preferences"
        android:icon="@drawable/icon_preferences"
        android:title="@string/menu_preferences">
    </item>

</menu>